# gabes_firstpackage

./: MLP_Momentum.py  MLP_momentum  README.md  pyproject.toml
src/: Func.py  Functions.py  MLP_Momentum.py  __init__.py
src/MyFirstPackage/: Functions.py  __init__.py
src/gabes_firstpackage/: functions.py  mlp_momentum.py
src/my-first-package/: MLP_Momentum.py  mlp_momentum.py
src/myfirstpackage/: __init__.py  functions.py  mlp_momentum.py
